--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Test-Source"]
 	path = test
-	url = https://github.com/pfeifferch/Test-Source
+	url = git://github.com/pfeifferch/Test-Source.git
